--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-styled-components": "^3.8.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^4.1.0",
     "react-lottie": "^1.2.3",
     "styled-components": "^5.2.1"
   },
