--- a/src/Projects.json
+++ b/src/Projects.json
@@ -11,7 +11,7 @@
         "title": "AXIA Capital Bank - Mobile App",
         "description": "A Bank Made For The Blockchain",
         "url": "https://apps.apple.com/ca/app/axia-capital-bank/id1627105580",
-        "Tools": "Javascript | React Native | Xcode | Ant design system,
+        "Tools": "Javascript | React Native | Xcode | Ant design system",
         "primaryColor": "#266FD2",
         "secondaryColor": "#E6F2FB"
     },
